Update admin ticket management API